--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <h2
+    <h2>This Feature is From Feature1</h2>
     <script src="script.js"></script>
     <p>This is a sample paragraph to demonstrate CSS styling.</p>
 </body>
