--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Hello World</h1>
     <h2>This Feature is From Feature1</h2>
+    <button>Click Me{dropdown}</button>
     <p>Welcome to the sample HTML document.{Dropdown}</p>
     <script src="script.js"></script>
     <p>This is a sample paragraph to demonstrate CSS styling.</p>
