--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,7 @@
     <h1>Hello World</h1>
     <h2>This Feature is From Feature1</h2>
     <button>Click Me</button>
+    <p>Welcome to the sample HTML document.{Button}</p>
    
     <script src="script.js"></script>
     <p>This is a sample paragraph to demonstrate CSS styling.</p>
